--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,6 +10,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.jupiter.version>5.5.1</junit.jupiter.version>
+        <sonar.projectKey>oussamabadr_FizzBuzzKata-Samples</sonar.projectKey>
+        <sonar.organization>oussamabadr</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 
